# curlify2

./: .gitignore  pyproject.toml
curlify2/: curlify.py
tests/: test_to_curl.py
